# ai-commit

./: CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/ai_commit/: cli.py  config.py  git_integration.py  hook_manager.py  llm_provider.py  prompt_manager.py  service.py
src/ai_commit/prompts/: conventional.txt  funny.txt  ghanaian.txt  pirate.txt
tests/: test_sanity.py
tests/unit/: test_cli.py  test_config.py  test_git_integration.py  test_hook_manager.py  test_llm_provider.py  test_prompt_manager.py  test_service.py
