# PEP 517/518: Specify the build system
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# PEP 621: Project metadata
[project]
name = "ai-commit"
dynamic = ["version"]
description = "A command-line tool to generate AI-powered commit messages."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Abdul Aziz Tetteh", email = "abdulaziztetteh@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
]
# Runtime dependencies
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/Slightly-Techie/ai-commit"
Repository = "https://github.com/Slightly-Techie/ai-commit"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.4",
]

# --- Tool Configurations ---

# Configuration for Hatch
[tool.hatch.version]
path = "src/ai_commit/__init__.py"

# Configuration for Ruff (linter and formatter)
[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes
    "I",  # isort
    "UP", # pyupgrade
]

# Configuration for Pytest
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"


[tool.uv]
